--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
         <title>Newt</title>
     </head>
     <body>
-        <div id="app" class="app"></div>
+        <div id="app"></div>
     </body>
 </html>
